# tradecraft-garden-rs

./: .gitignore  CallWalk.java  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
c_bind_headers/: tcg.h
libtcg/: Makefile
libtcg/src/: debug.c  loaddll.c  loaderdefs.h  picorun.c  resolve_eat.c  util.c
sdk/: types.h
src/: Cargo.toml  Makefile  REQUIREMENTS.md  common.mk
src/demo/: Makefile
src/demo/c/: run.c  testdll.c  testobj.c
src/demo/rs/: Cargo.toml  testdll.rs  testobj.rs
src/loader1/: Makefile  README.md  loader.spec
src/loader1/c/: loader.c
src/loader1/rs/: Cargo.toml  loader.rs
src/loader2/: Makefile  loader.spec
src/loader2/c/: free.c  loader.c
src/loader2/rs/: Cargo.toml  free.rs  loader.rs
src/loader3/: Makefile  loader.spec
src/loader3/c/: loader.c
src/loader3/rs/: Cargo.toml  free.rs  loader.rs
src/loader4/: Makefile  README.md  loader.spec
src/loader4/c/: loader.c
src/loader4/rs/: Cargo.toml  loader.rs
src/loader5/: Makefile  README.md  guardrail.spec  stage1.spec  stage2.spec
src/loader5/c/: free.c  gr_impl.c  guardrail.c  stage1.c  stage2.c
src/loader5/rs/: Cargo.toml  free.rs  gr_impl.rs  guardrail.rs  stage1.rs  stage2.rs
src/loader6/: Makefile  README.md  freeandrun.spec  loader.spec  xorhooks.spec  xorhooks_setup.spec
src/loader6/c/: hook.c  loader.c  xorhooks.c  xorhooks_setup.c
src/loader6/modules/stackcutting/: Makefile  stackcutting.spec
src/loader6/modules/stackcutting/c/: proxy.c  proxy.h  stackcut.c  stackcut_setup.c
src/loader6/modules/stackcutting/rs/: Cargo.toml  proxy.rs  stackcut.rs  stackcut_setup.rs
src/loader6/modules/stackcutting/rs/common/: lib.rs
src/loader6/modules/xorhooks/: Makefile  xorhooks.spec
src/loader6/modules/xorhooks/c/: xorhooks.c  xorhooks_setup.c
src/loader6/modules/xorhooks/rs/: Cargo.toml  xorhooks.rs  xorhooks_setup.rs
src/loader6/rs/: Cargo.toml  hook.rs  loader.rs  xorhooks.rs  xorhooks_setup.rs
src/loader7/: Makefile  README.md  loader.spec
src/loader7/c/: loader.c
src/loader7/rs/: Cargo.toml  loader.rs
src/loader8/: Makefile  README.md  link.spec  loader.spec
src/loader8/c/: loader.c
src/loader8/rs/: Cargo.toml  loader.rs
src/page_streaming/: Makefile  README.md  loader.spec
src/page_streaming/c/: guardexec.c  loader.c
src/page_streaming/rs/: Cargo.toml  free.rs  guardexec.rs  loader.rs
src/simple_pic/: Makefile  loader.spec  services.spec
src/simple_pic/rs/: Cargo.toml  services.rs
src/stack_cutting/: Makefile  freeandrun.spec  loader.spec  stackcut.spec  stackcut_setup.spec
src/stack_cutting/c/: free.c  stackcut.c  stackcut_setup.c
src/stack_cutting/rs/: Cargo.toml  free.rs  hook.rs  loader.rs  proxy.rs  stackcut.rs  stackcut_setup.rs
