[package]
name = "crystal-bindings"
version = "0.1.1"
edition = "2024"
build = "build.rs"

description = "Generate bindings for anything in a modular fashion. This crate is specifically designed for crystal palace linker for cross language bindings but with a few modifications can be used for anything."
repository = "https://github.com/laachy/crystal-bindings"
readme = "README.md"
license = "MIT OR Apache-2.0"

[build-dependencies]
bindgen = "0.72.1"

[dependencies]
winapi = "0.3.9"
ntapi = "0.4.1"
