[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
crystal-sdk = { workspace = true }
winapi = { version = "0.3", features = ["winuser"] }
ntapi  = { workspace = true }

#[[bin]]
#name = "run"
#path = "run.rs"

[lib]
name = "testdll"
path = "testdll.rs"
crate-type = ["cdylib"]

[[bin]]
name = "testobj"
path = "testobj.rs"

