[package]
name = "loader3"
version = "0.1.0"
edition = "2024"

[dependencies]
crystal-palace-sys = { workspace = true }
crystal-palace-rs = { workspace = true }
winapi = { workspace = true }
ntapi  = { workspace = true }

[[bin]]
name = "loader"
path = "loader.rs"

[[bin]]
name = "free"
path = "free.rs"