[package]
name = "loader5"
version = "0.1.0"
edition = "2024"

[dependencies]
crystal-palace-sys = { workspace = true }
crystal-palace-rs = { workspace = true }
winapi = { workspace = true }
ntapi  = { workspace = true }

[[bin]]
name = "stage1"
path = "stage1.rs"

[[bin]]
name = "stage2"
path = "stage2.rs"

[[bin]]
name = "guardrail"
path = "guardrail.rs"