[package]
name = "loader5"
version = "0.1.0"
edition = "2024"

[dependencies]
crystal-bindings = { workspace = true }
crystal-sdk = { workspace = true }
winapi = { workspace = true }
ntapi  = { workspace = true }

[[bin]]
name = "guardrail"
path = "guardrail.rs"

[[bin]]
name = "gr_impl"
path = "gr_impl.rs"

[[bin]]
name = "free"
path = "free.rs"
