[package]
name = "stackcutting"
version = "0.1.0"
edition = "2024"

[dependencies]
crystal-bindings = { workspace = true }
crystal-sdk = { workspace = true }
winapi = { workspace = true }
ntapi  = { workspace = true }

[lib]
path = "common/lib.rs"

[[bin]]
name = "proxy"
path = "proxy.rs"

[[bin]]
name = "stackcut"
path = "stackcut.rs"

[[bin]]
name = "stackcut_setup"
path = "stackcut_setup.rs"