[package]
name = "xorhooks"
version = "0.1.0"
edition = "2024"

[dependencies]
crystal-bindings = { workspace = true }
crystal-sdk = { workspace = true }
winapi = { workspace = true }
ntapi  = { workspace = true }

[[bin]]
name = "xorhooks"
path = "xorhooks.rs"

[[bin]]
name = "xorhooks_setup"
path = "xorhooks_setup.rs"